<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Container" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/appThemeColor"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_ars" />
    </LinearLayout>

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/nameTv"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round"
        android:ems="10"
        android:padding="5dp" >
    </EditText>

    <TextView
        android:id="@+id/numberTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="Enter your number"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/numberEt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp" >
    </EditText>

    <TextView
        android:id="@+id/accidentTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/accidentTypeTv"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/accidentEt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round"
        android:ems="10"
        android:padding="5dp" >
    </EditText>

    <TextView
        android:id="@+id/accidentDescTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/accidentDesc"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/accidentDescEt"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/round"
        android:ems="10"
        android:padding="5dp"
        android:scrollbars="vertical" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="@color/appThemeColor" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/nextBtn"
            android:src="@drawable/next_button" />
    </LinearLayout>

</LinearLayout>